--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-/*
-* Design by Blaz Robar: https://goo.gl/1aAmvV
-* Text by Alexandra K (ff0004-red), except default Lorem Ipsum :) 
-*/
-
-
-/* GENERAL STYLING */
-
+@import url('https://fonts.googleapis.com/css?family=Exo+2:700');
+* {
+  margin: 0 auto;
+  padding: 0;
+}
 ul {
 	list-style-type: none;
   }
@@ -38,7 +35,8 @@ ul {
 	font-size: 20px;
 	color: #adadad;
   }
-  
+	
+	
   address {
 	font-style: normal;
   }
@@ -83,9 +81,47 @@ ul {
 	float: left;
 	margin: 10px 10px 0 0;
   }
+  .aboutus {
+		
+		background: url("https://image.ibb.co/mJ9tLa/image.png");
+  background-color: #212121;
+  background-blend-mode: overlay;
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+ }
+		
+		.aboutus-container {
+		height: 300px;
+		width: 940px;
+		margin: 0 auto;
+		}
+		
   
-  
-  
+	
+	.aboutus h1 {
+		color: whitesmoke;
+		font-family: 'Exo 2', sans-serif;
+		font-size: 46px;
+		font-weight: 900;
+		text-transform: uppercase;
+		text-align: center;
+
+	}
+	
+	.aboutus p {
+		max-width: 700px;
+		min-height: 200px;
+		padding: 0;
+		color: whitesmoke;
+		font-family: OpenSans;
+		font-size: 14px;
+		font-weight: 300;
+		line-height: 22px;
+		text-align: center;
+
+	}
+	
   /* #socials */
   
   .socials {
