--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ ul {
 	margin: 0;
 	padding-top: 50px; /*100*/
 	font-weight: 700;
+	color:#ffffff;
 	font-size: 32px;
   }
   
@@ -58,6 +59,7 @@ ul {
 	 background-image: url("https://images7.alphacoders.com/897/897098.jpg");
 	  background-repeat: no-repeat;
 	  background-size: cover;
+	  margin: 0px;
    }
   
   .head-container {
@@ -125,6 +127,19 @@ ul {
 	color: white;
   }
   
+
+  
+  .home-social-list {
+    position: absolute;
+    right: 48px;
+    bottom: 54px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 2.4rem;
+    line-height: 1.75;
+    text-align: center;
+}
   /*.hero h1 {
 	margin: 0;
 	padding-top: 242px;
@@ -173,7 +188,7 @@ ul {
 	display: block;
 	width: 20px;
 	margin: 0 auto;
-	padding-bottom: 52px;
+	padding-bottom: 30px;
 	color: #000000;
   }
   
@@ -187,10 +202,16 @@ ul {
   /* #SERVICES SECTION */
   
   .services-container {
-	/*height: 650px; 760*/
-	width: 940px;
-	margin: 0 auto;
-  }
+		
+		background: url("E:/Mozilla/MOZILLA/logo/1.jpg");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 360px;
+		margin: 0 auto;
+
+ }
+	
   
   .services-block {
 	width: 100%;
@@ -263,9 +284,12 @@ ul {
   /* #PRICING SECTION */
   
   .event-container {
-	/*height: 750px; 850*/
-	width: 940px;
-	margin: 0 auto;
+	background: url("E:/Mozilla/MOZILLA/logo/2.jpg");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 700px;
+		margin: 0 auto;
   }
   
 
@@ -370,9 +394,12 @@ ul {
   /* #PORTFOLIO SECTION */
   
   .portfolio-container {
-	/*height: 960px;  1030*/
-	width: 940px;
-	margin: 0 auto;
+	background: url("E:/Mozilla/MOZILLA/logo/3.jpg");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 940px;
+		margin: 0 auto;
   }
   
   .positioning-container {
@@ -450,9 +477,12 @@ ul {
   /* #TEAM SECTION */
   
   .team-block-container {
-	/*height: 650px; 750*/
-	width: 940px;
-	margin: 0 auto;
+	background: url("E:/Mozilla/MOZILLA/logo/2.jpg");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 700px;
+		margin: 0 auto;
   }
   
   .team-block {
@@ -541,61 +571,71 @@ ul {
   
   /* #stats */
   
-  .stats-container {
-	/*width: 660px;*/
-	width: 70%;
-	margin: 0 auto 75px auto;
-  }
-  
-  .stats-block {
-	display: inline-block;
-	width: 24%;
-	text-align: center;
-  }
-  
-  .stats-block .fa-puzzle-piece {
-	display: block;
-	/*margin-left: 40%;*/
-	margin-left: 10%;
-  }
-  
-  .stats-block .fa-cloud-download {
-	display: block;
-	/*margin-left: 34%;*/
-  }
-  
-  .stats-block .fa-users {
-	display: block;
-	/*margin-left: 36%;*/
-  }
-  
-  .stats-block .fa-thumbs-up {
-	display: block;
-	/*margin-left: 37%;*/
-  }
-  
-  .stats-block h4,
-  .stats-block h5 {
-	font-family: 'Source Sans Pro', sans-serif;
-	text-align: center;
-  }
-  
-  .stats-block h4 {
-	margin: 0;
-	font-size: 24px;
-	font-weight: 700;
-  }
-  
-  .stats-block h5 {
-	margin: 0;
-	font-size: 14px;
-	font-weight: 400;
-	color: #adadad;
-  }
-  
+	  .stats-container {
+		/*width: 660px;*/
+		width: 70%;
+		margin: 0 auto 75px auto;
+	  }
+	  
+	  .stats-block {
+		display: inline-block;
+		width: 24%;
+		text-align: center;
+	  }
+	  
+	  .stats-block .fa-puzzle-piece {
+		display: block;
+		/*margin-left: 40%;*/
+		margin-left: 10%;
+	  }
+	  
+	  .stats-block .fa-cloud-download {
+		display: block;
+		/*margin-left: 34%;*/
+	  }
+	  
+	  .stats-block .fa-users {
+		display: block;
+		/*margin-left: 36%;*/
+	  }
+	  
+	  .stats-block .fa-thumbs-up {
+		display: block;
+		/*margin-left: 37%;*/
+	  }
+	  
+	  .stats-block h4,
+	  .stats-block h5 {
+		font-family: 'Source Sans Pro', sans-serif;
+		text-align: center;
+	  }
+	  
+	  .stats-block h4 {
+		margin: 0;
+		font-size: 24px;
+		font-weight: 700;
+	  }
+	  
+	  .stats-block h5 {
+		margin: 0;
+		font-size: 14px;
+		font-weight: 400;
+		color: #adadad;
+	  }
+	  
   
   /* #testimonials */
-  
+  .testimonials-container{
+  	background: url("E:/Mozilla/MOZILLA/logo/4.png");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 700px;
+		padding-top: 30px;
+		width: 100%;
+		margin: 0 auto;
+
+  }
   .customer-info {
 	height: 190px;
 	/*width: 940px;*/
@@ -635,21 +675,7 @@ ul {
 	margin: 25px auto 0 auto;
   }
   
-  .fa-quote-left,
-  .fa-quote-right {
-	color: #898989;
-  }
-  
-  .fa-quote-right {
-	position: absolute;
-	bottom: 60%;
-	left: 95%;
-  }
-  
-  .fa-quote-left {
-	position: absolute;
-	top: 10%;
-  }
+ 
   
   blockquote {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -658,7 +684,24 @@ ul {
 	color: #adadad;
 	text-align: center;
   }
-  
+  blockquote:before{
+  	font-family: "FontAwesome";
+   content: "\f10d";
+   display: inline-block;
+   padding-right: 3px;
+   padding-bottom: 20px;
+   vertical-align: middle;
+   font-weight: 300;
+  }
+   blockquote:after{
+  	font-family: "FontAwesome";
+   content: "\f10e";
+   display: inline-block;
+   padding-right: 3px;
+   padding-bottom: 20px;
+   vertical-align: middle;
+   font-weight: 300;
+  }
   /*--------------------------------------------*/
   
   /*--------------------------------------------*/
@@ -667,9 +710,12 @@ ul {
   /* #FEEDBACK SECTION */
   
   .feedback-container {
-	/*height: 950px; 990*/
-	width: 940px;
-	margin: 0 auto;
+	background: url("E:/Mozilla/MOZILLA/logo/4.jpg");
+  background-position: center;
+  background-size: cover;
+	text-align: center;
+		height: 940px;
+		margin: 0 auto;
   }
   
   
