--- a/css/style.css
+++ b/css/style.css
@@ -90,35 +90,6 @@ ul {
   }
   
   
-  
-  /* #socials */
-  
-  .socials {
-	display: inline-block;
-	float: right;
-   
-	margin-top: 30px;
-  }
-  
-  .socials ul {
-	margin: 0;
-	padding: 0;
-  }
-  
-  .socials ul li {
-	display: inline-block;
-	margin-right: 19px;
-  }
-  
-  .socials ul li a {
-	color: #000000;
-  }
-  
-  .socials ul li a:hover {
-	color: #898989;
-  }
-  
-  
   /* #hero */
   
   .hero {
@@ -203,7 +174,7 @@ ul {
   
   .services-container {
 		
-		background: url("E:/Mozilla/MOZILLA/logo/1.jpg");
+		background: url("https://i.ibb.co/6gXcrgP/1.jpg");
   width: 100%;
 	 height:100%;	
 	 display: flex;
@@ -224,7 +195,7 @@ ul {
   /* #PRICING SECTION */
   
   .event-container {
-	background: url("E:/Mozilla/MOZILLA/logo/2.jpg");
+	background: url("https://i.ibb.co/JqgB58c/2.jpg");
    width: 100%;
 	 height:100%;	
 	  background-size: cover;
@@ -334,7 +305,7 @@ ul {
   /* #PORTFOLIO SECTION */
   
   .portfolio-container {
-	background: url("E:/Mozilla/MOZILLA/logo/3.jpg");
+	background: url("https://i.ibb.co/b7TjZTY/3.jpg");
    width: 100%;
 	 height:auto;	
 	  background-size: cover;
@@ -417,7 +388,7 @@ ul {
   /* #TEAM SECTION */
   
   .team-block-container {
-	background: url("E:/Mozilla/MOZILLA/logo/2.jpg");
+	background: url("https://i.ibb.co/JqgB58c/2.jpg");
    width: 100%;
 	 height:100%;	
 	  background-size: cover;
@@ -566,7 +537,7 @@ ul {
   
   /* #testimonials */
   .testimonials-container{
-  	background: url("E:/Mozilla/MOZILLA/logo/4.png") no-repeat;
+  	background: url("https://i.ibb.co/sqSvVrn/4.png") no-repeat;
   width: 100%;
 	 height:100%;	
 	  background-size: cover;
@@ -649,12 +620,14 @@ ul {
   /* #FEEDBACK SECTION */
   
   .feedback-container {
-	background: url("E:/Mozilla/MOZILLA/logo/4.jpg");
+	background: url("https://i.ibb.co/T4XCxJH/firefox-browser-planet-space-30974-1920x1080.jpg");
   background-position: center;
+   width: 100%;
+	 height:auto;	
+	  background-attachment: fixed;
+	  overflow: hidden;
   background-size: cover;
 	text-align: center;
-		height: 940px;
-		margin: 0 auto;
   }
   
   
@@ -811,112 +784,18 @@ ul {
   
   /* #footer form */
   
-  .footer-form {
-	padding-bottom: 40px;
-	margin-bottom: 103px;
-  }
   
-  .footer-form h2,
-  .footer-form p,
-  .footer-form input[type=email],
-  .footer-form input[type=submit] {
-	font-family: 'Source Sans Pro', sans-serif;
-  }
-  
-  .footer-form h2 {
-	margin: 0;
-	padding-top: 92px;
-	font-size: 32px;
-	font-weight: 700;
-	text-align: center;
-	color: #ffffff;
-  }
-  
-  .footer-form p {
-	margin: 16px 0 38px 0;
-	font-size: 20px;
-	font-weight: 400;
-	text-align: center;
-	color: #898989;
-  }
-  
-  .footer-form form {
-	height: 52px;
-	/*width: 742px;*/
-	width: 80%;
-	margin: 0 auto;
-  }
-  
-  .footer-form input[type=email],
-  .footer-form input[type=submit] {
-	outline: none;
-  }
-  
-  .footer-form input[type=email] {
-	float: left;
-	height: 52px;
-	width: 597px;
-	padding-left: 22px;
-	border: transparent;
-	box-sizing: border-box;
-  }
-  
-  .footer-form input[type=submit] {
-	float: right;
-	height: 52px;
-	width: 140px;
-	border: transparent;
-	text-transform: uppercase;
-	font-weight: 700;
-	background-color: #ffffff;
-	cursor: pointer;
-	box-sizing: border-box;
-  }
-  
-  .footer-form input[type=submit]:hover {
-	border: none;
-	background-color: #696969;
-  }
   
   .block {
 	width: 100%;
-	height: 250px;
+	height: 370px;
   
   }
   
   
   /* #footer contacts */
   
-  .footer-contacts h5,
-  .footer-contacts address,
-  .footer-contacts a,
-  .footer-nav ul li a {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 16px;
-	color: #ffffff;
-  }
-  
-  .footer-contacts {
-	float: left;
-	display: inline-block;
-	line-height: 1.2em;
-  }
-  
-  .footer-contacts h5 {
-	margin: 0;
-	font-weight: 400;
-  }
-  
-  .footer-contacts a {
-	display: block;
-	margin-top: 4px;
-  }
-  
-  .footer-contacts a:hover,
-  .footer-nav a:hover {
-	color: #fcdb00;
-  }
-  
+ 
   /* #footer navigation */
   
   .footer-nav {
@@ -926,6 +805,64 @@ ul {
 	/*height: 140px;*/
 	width: 570px;
   }
+  .middle{
+  position: absolute;
+  top: 50%;
+      margin: 147px;
+    right: 0%
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+}
+.btn{
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #3498db;
+  overflow: hidden;
+  position: relative;
+}
+.btn i{
+  line-height: 90px;
+  font-size: 26px;
+  transition: 0.2s linear;
+}
+.btn:hover i{
+  transform: scale(1.3);
+  color: #f1f1f1;
+}
+.btn::before{
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: #3498db;
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+.btn:hover::before{
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
+@keyframes aaa {
+  0%{
+    left: -110%;
+    top: 90%;
+  }50%{
+    left: 10%;
+    top: -30%;
+  }100%{
+    top: -10%;
+    left: -10%;
+  }
+}
+
   
   .footer-nav ul {
 	display: inline-block;
